SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QLParser.java
// $ANTLR 3.5 /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g 2013-01-21 14:20:35

package org.uva.sea.ql.parser.antlr;
import org.uva.sea.ql.ast.*;
import org.uva.sea.ql.ast.nodetypes.primary.*;
import org.uva.sea.ql.ast.nodetypes.unary.*;
import org.uva.sea.ql.ast.nodetypes.binary.*;
import org.uva.sea.ql.ast.nodetypes.formelement.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class QLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BRACE_CLOSE", "BRACE_OPEN", "Bool", 
		"COMMENT", "EscapedCharacterSequence", "FORM", "Ident", "Int", "PAREN_CLOSE", 
		"PAREN_OPEN", "Str", "WS", "'!'", "'!='", "'&&'", "'*'", "'+'", "'-'", 
		"'/'", "':'", "'<'", "'<='", "'=='", "'>'", "'>='", "'boolean'", "'else'", 
		"'if'", "'integer'", "'string'", "'||'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int BRACE_CLOSE=4;
	public static final int BRACE_OPEN=5;
	public static final int Bool=6;
	public static final int COMMENT=7;
	public static final int EscapedCharacterSequence=8;
	public static final int FORM=9;
	public static final int Ident=10;
	public static final int Int=11;
	public static final int PAREN_CLOSE=12;
	public static final int PAREN_OPEN=13;
	public static final int Str=14;
	public static final int WS=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public QLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public QLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[40+1];


	}

	@Override public String[] getTokenNames() { return QLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g"; }


	  private String removeOuterQuotes(String original) {
	    return original.substring(1, original.length()-1);
	  }



	// $ANTLR start "form"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:26:1: form returns [Form result] : FORM Ident BRACE_OPEN statementList BRACE_CLOSE ;
	public final Form form() throws RecognitionException {
		Form result = null;

		int form_StartIndex = input.index();

		Token Ident1=null;
		List<QLStatement> statementList2 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:27:3: ( FORM Ident BRACE_OPEN statementList BRACE_CLOSE )
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:27:5: FORM Ident BRACE_OPEN statementList BRACE_CLOSE
			{
			match(input,FORM,FOLLOW_FORM_in_form56); if (state.failed) return result;
			Ident1=(Token)match(input,Ident,FOLLOW_Ident_in_form58); if (state.failed) return result;
			match(input,BRACE_OPEN,FOLLOW_BRACE_OPEN_in_form60); if (state.failed) return result;
			pushFollow(FOLLOW_statementList_in_form62);
			statementList2=statementList();
			state._fsp--;
			if (state.failed) return result;
			match(input,BRACE_CLOSE,FOLLOW_BRACE_CLOSE_in_form64); if (state.failed) return result;
			if ( state.backtracking==0 ) {
				    result = new Form(new Ident((Ident1!=null?Ident1.getText():null)), statementList2);
				  }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, form_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "form"



	// $ANTLR start "block"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:33:1: block returns [List<QLStatement> result] : BRACE_OPEN statementList BRACE_CLOSE ;
	public final List<QLStatement> block() throws RecognitionException {
		List<QLStatement> result = null;

		int block_StartIndex = input.index();

		List<QLStatement> statementList3 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:34:3: ( BRACE_OPEN statementList BRACE_CLOSE )
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:34:5: BRACE_OPEN statementList BRACE_CLOSE
			{
			match(input,BRACE_OPEN,FOLLOW_BRACE_OPEN_in_block90); if (state.failed) return result;
			pushFollow(FOLLOW_statementList_in_block92);
			statementList3=statementList();
			state._fsp--;
			if (state.failed) return result;
			match(input,BRACE_CLOSE,FOLLOW_BRACE_CLOSE_in_block94); if (state.failed) return result;
			if ( state.backtracking==0 ) {
				    result = statementList3;
				  }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, block_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "block"



	// $ANTLR start "statementList"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:40:1: statementList returns [List<QLStatement> result] : (stmnt= statement )* ;
	public final List<QLStatement> statementList() throws RecognitionException {
		List<QLStatement> result = null;

		int statementList_StartIndex = input.index();

		QLStatement stmnt =null;


		    result = new ArrayList<QLStatement>();
		  
		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:45:3: ( (stmnt= statement )* )
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:45:5: (stmnt= statement )*
			{
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:45:5: (stmnt= statement )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==Ident||LA1_0==31) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:45:6: stmnt= statement
					{
					pushFollow(FOLLOW_statement_in_statementList132);
					stmnt=statement();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) {result.add(stmnt);}
					}
					break;

				default :
					break loop1;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, statementList_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "statementList"



	// $ANTLR start "statement"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:48:1: statement returns [QLStatement result] : ( question | computation | conditional );
	public final QLStatement statement() throws RecognitionException {
		QLStatement result = null;

		int statement_StartIndex = input.index();

		Question question4 =null;
		Computation computation5 =null;
		Conditional conditional6 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:49:3: ( question | computation | conditional )
			int alt2=3;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Ident) ) {
				int LA2_1 = input.LA(2);
				if ( (LA2_1==23) ) {
					int LA2_3 = input.LA(3);
					if ( (LA2_3==Str) ) {
						int LA2_4 = input.LA(4);
						if ( (LA2_4==PAREN_OPEN) ) {
							alt2=2;
						}
						else if ( (LA2_4==29||(LA2_4 >= 32 && LA2_4 <= 33)) ) {
							alt2=1;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return result;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 4, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return result;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return result;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA2_0==31) ) {
				alt2=3;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return result;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:49:5: question
					{
					pushFollow(FOLLOW_question_in_statement153);
					question4=question();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) { result = question4; }
					}
					break;
				case 2 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:50:5: computation
					{
					pushFollow(FOLLOW_computation_in_statement161);
					computation5=computation();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) { result = computation5; }
					}
					break;
				case 3 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:51:5: conditional
					{
					pushFollow(FOLLOW_conditional_in_statement169);
					conditional6=conditional();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) { result = conditional6; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, statement_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "statement"



	// $ANTLR start "question"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:54:1: question returns [Question result] : Ident ':' Str datatype ;
	public final Question question() throws RecognitionException {
		Question result = null;

		int question_StartIndex = input.index();

		Token Ident7=null;
		Token Str8=null;
		Class<? extends Datatype<?>> datatype9 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:55:3: ( Ident ':' Str datatype )
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:55:5: Ident ':' Str datatype
			{
			Ident7=(Token)match(input,Ident,FOLLOW_Ident_in_question188); if (state.failed) return result;
			match(input,23,FOLLOW_23_in_question190); if (state.failed) return result;
			Str8=(Token)match(input,Str,FOLLOW_Str_in_question192); if (state.failed) return result;
			pushFollow(FOLLOW_datatype_in_question194);
			datatype9=datatype();
			state._fsp--;
			if (state.failed) return result;
			if ( state.backtracking==0 ) {
				    Ident ident = new Ident((Ident7!=null?Ident7.getText():null));
				    Str label = new Str(removeOuterQuotes((Str8!=null?Str8.getText():null)));
				    Class<? extends Datatype<?>> datatype = datatype9;
				    result = new Question(ident, label, datatype);
			    }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, question_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "question"



	// $ANTLR start "datatype"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:64:1: datatype returns [Class<? extends Datatype<?>> result] : ( 'boolean' | 'string' | 'integer' );
	public final Class<? extends Datatype<?>> datatype() throws RecognitionException {
		Class<? extends Datatype<?>> result = null;

		int datatype_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:65:3: ( 'boolean' | 'string' | 'integer' )
			int alt3=3;
			switch ( input.LA(1) ) {
			case 29:
				{
				alt3=1;
				}
				break;
			case 33:
				{
				alt3=2;
				}
				break;
			case 32:
				{
				alt3=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return result;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:65:5: 'boolean'
					{
					match(input,29,FOLLOW_29_in_datatype220); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = Bool.class; }
					}
					break;
				case 2 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:66:5: 'string'
					{
					match(input,33,FOLLOW_33_in_datatype228); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = Str.class; }
					}
					break;
				case 3 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:67:5: 'integer'
					{
					match(input,32,FOLLOW_32_in_datatype236); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = Int.class; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 6, datatype_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "datatype"



	// $ANTLR start "computation"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:70:1: computation returns [Computation result] : Ident ':' Str PAREN_OPEN orExpr PAREN_CLOSE ;
	public final Computation computation() throws RecognitionException {
		Computation result = null;

		int computation_StartIndex = input.index();

		Token Ident10=null;
		Token Str11=null;
		ASTNode orExpr12 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:71:3: ( Ident ':' Str PAREN_OPEN orExpr PAREN_CLOSE )
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:71:5: Ident ':' Str PAREN_OPEN orExpr PAREN_CLOSE
			{
			Ident10=(Token)match(input,Ident,FOLLOW_Ident_in_computation257); if (state.failed) return result;
			match(input,23,FOLLOW_23_in_computation259); if (state.failed) return result;
			Str11=(Token)match(input,Str,FOLLOW_Str_in_computation261); if (state.failed) return result;
			match(input,PAREN_OPEN,FOLLOW_PAREN_OPEN_in_computation263); if (state.failed) return result;
			pushFollow(FOLLOW_orExpr_in_computation265);
			orExpr12=orExpr();
			state._fsp--;
			if (state.failed) return result;
			match(input,PAREN_CLOSE,FOLLOW_PAREN_CLOSE_in_computation267); if (state.failed) return result;
			if ( state.backtracking==0 ) {
			      Ident ident = new Ident((Ident10!=null?Ident10.getText():null));
			      Str label = new Str(removeOuterQuotes((Str11!=null?Str11.getText():null)));
			      ASTNode orExpression = orExpr12;
			      result = new Computation(ident, label, orExpression);
			    }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 7, computation_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "computation"



	// $ANTLR start "conditional"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:80:1: conditional returns [Conditional result] : 'if' '(' condition= orExpr ')' success= block ( ( 'else' )=> 'else' failure= block | () ) ;
	public final Conditional conditional() throws RecognitionException {
		Conditional result = null;

		int conditional_StartIndex = input.index();

		ASTNode condition =null;
		List<QLStatement> success =null;
		List<QLStatement> failure =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return result; }

			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:81:3: ( 'if' '(' condition= orExpr ')' success= block ( ( 'else' )=> 'else' failure= block | () ) )
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:81:5: 'if' '(' condition= orExpr ')' success= block ( ( 'else' )=> 'else' failure= block | () )
			{
			match(input,31,FOLLOW_31_in_conditional292); if (state.failed) return result;
			match(input,PAREN_OPEN,FOLLOW_PAREN_OPEN_in_conditional294); if (state.failed) return result;
			pushFollow(FOLLOW_orExpr_in_conditional298);
			condition=orExpr();
			state._fsp--;
			if (state.failed) return result;
			match(input,PAREN_CLOSE,FOLLOW_PAREN_CLOSE_in_conditional300); if (state.failed) return result;
			pushFollow(FOLLOW_block_in_conditional304);
			success=block();
			state._fsp--;
			if (state.failed) return result;
			// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:82:5: ( ( 'else' )=> 'else' failure= block | () )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==30) && (synpred6_QL())) {
				alt4=1;
			}
			else if ( (LA4_0==EOF||LA4_0==BRACE_CLOSE||LA4_0==Ident||LA4_0==31) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return result;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:82:7: ( 'else' )=> 'else' failure= block
					{
					match(input,30,FOLLOW_30_in_conditional318); if (state.failed) return result;
					pushFollow(FOLLOW_block_in_conditional322);
					failure=block();
					state._fsp--;
					if (state.failed) return result;
					}
					break;
				case 2 :
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:83:7: ()
					{
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:83:7: ()
					// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:83:9: 
					{
					}

					}
					break;

			}

			if ( state.backtracking==0 ) {
			      if (failure != null) {
			        result = new Conditional(condition, success, failure);
			      } else {
			        result = new Conditional(condition, success);
			      }
			    }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 8, conditional_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "conditional"



	// $ANTLR start "primary"
	// /home/sander/Documents/workspace/freshSeaOfQL/SanderBenschop/QLJava/src/main/java/org/uva/sea/ql/parser/antlr/QL.g:94:1: primary returns [ASTNode result] : ( Int | Bool | Str | Ident | '(' x= orExpr ')' );
	public final ASTNode primary() throws RecognitionException {
		ASTNode result = null;

		int primary_StartIndex = input.index();

		Token Int13=null;
		Token Bool14=null;
		Token Str15=null;
		Token Ident16=null;
		ASTNode x =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return result; }
